Making proper changes
