# src/main/java/com/flightapp/controller/FlightsApiController.java
@@ -1,11 +1,7 @@
 package com.flightapp.controller;
 
 import com.flightapp.openapi.controller.FlightsApi;
-import com.flightapp.openapi.dto.Flight;
-import com.flightapp.openapi.dto.FlightBooking;
-import com.flightapp.openapi.dto.FlightTicket;
-import com.flightapp.openapi.dto.Flights;
-import com.flightapp.openapi.dto.FlightsSearchByOptions;
+import com.flightapp.openapi.dto.*;
 import com.flightapp.service.FlightsService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,17 +18,17 @@ public class FlightsApiController implements FlightsApi {
     private final FlightsService flightsService;
 
     @Override
-    public ResponseEntity<FlightBooking> addFlightBooking(Long flightId, @Valid FlightBooking flightBooking) {
+    public ResponseEntity<FlightBookingResponse> addFlightBooking(Long flightId, @Valid FlightBooking flightBooking) {
         return ResponseEntity.ok(flightsService.addFlightBooking(flightId, flightBooking));
     }
 
     @Override
-    public ResponseEntity<Void> cancelBooking(String pnr) {
-        return null;
+    public ResponseEntity<Message> cancelBooking(String pnr) {
+        return ResponseEntity.ok(flightsService.cancelBooking(pnr));
     }
 
     @Override
-    public ResponseEntity<FlightTicket> getFlightTicketByEmail(String emailId) {
+    public ResponseEntity<FlightTickets> getFlightTicketByEmail(String emailId) {
         return ResponseEntity.ok(flightsService.getFlightTicketByEmail(emailId));
     }
 
