# src/main/resources/openAPI/flightapp.yaml
@@ -73,7 +73,7 @@ paths:
         $ref: '#/components/requestBodies/FlightBooking'
       responses:
         '200':
-          $ref: '#/components/responses/FlightBooking'
+          $ref: '#/components/responses/FlightBookingResponse'
         '400':
           $ref: '#/components/responses/BadRequestError'
         '401':
@@ -95,7 +95,7 @@ paths:
         - $ref: '#/components/parameters/PNR'
       responses:
         '204':
-          description: The booking was successfully cancelled.
+          $ref: '#/components/responses/DeleteBookingResponse'
         '400':
           $ref: '#/components/responses/BadRequestError'
         '401':
@@ -104,7 +104,7 @@ paths:
           $ref: '#/components/responses/ForbiddenError'
         '404':
           $ref: '#/components/responses/NotFoundError'
-  /flights/tickets/{pnr}:
+  /flights/ticket/{pnr}:
     get:
       tags:
         - Flights
@@ -139,7 +139,7 @@ paths:
         - $ref: '#/components/parameters/EmailId'
       responses:
         '200':
-          $ref: '#/components/responses/FlightTicket'
+          $ref: '#/components/responses/FlightTickets'
         '400':
           $ref: '#/components/responses/BadRequestError'
         '401':
@@ -359,6 +359,13 @@ components:
                 type: boolean
                 example: true
                 description: Passenger meal.
+    FlightBookingResponse:
+      allOf:
+        - $ref: '#/components/schemas/FlightBooking'
+        - type: object
+          properties:
+            pnr:
+              $ref: '#/components/schemas/PNR'
     FlightTicket:
       type: object
       properties:
@@ -376,37 +383,36 @@ components:
           format: date-time
           example: '2021-01-30T08:30:00Z'
           description: The date-time the trip will end.
-    Error:
+    FlightTickets:
       type: object
-      required:
-        - "Errors"
       properties:
-        Errors:
-          type: object
-          required:
-            - "Error"
+        flights:
+          type: array
+          description: List of Flight Tickets.
+          items:
+            $ref: '#/components/schemas/FlightTicket'
+    Message:
+      type: object
+      properties:
+        Source:
+          type: string
+          description: 'Source for which the message applies to'
+        ReasonCode:
+          type: string
+          description: 'A reason code for the message that has occurred.'
+        Description:
+          type: string
+          description: 'Description of the message.'
+    Error:
+      allOf:
+        - $ref: '#/components/schemas/Message'
+        - type: object
           properties:
-            Error:
-              type: array
-              description: 'Only returned in the event of an error condition.'
-              items:
-                type: object
-                properties:
-                  Source:
-                    type: string
-                    description: 'An element used to indicate the source of the issue causing this error.'
-                  ReasonCode:
-                    type: string
-                    description: 'A reason code for the error that has occurred.'
-                  Description:
-                    type: string
-                    description: 'Description of the reason the operation failed.'
-                  Recoverable:
-                    type: boolean
-                    description: 'Generated by the gateway to indicate if the request could presented again for processing. Either "true" or "false".'
-                  Details:
-                    type: string
-                    description: 'Identifies the description of the error.'
+            Details:
+              type: string
+              format: ^[a-zA-Z0-9]+$
+              description: Details of the error
+              example: 'Error Message Detail If any'
   requestBodies:
     Flight:
       required: true
@@ -439,6 +445,9 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Flight'
+          examples:
+            FlightExample:
+              $ref: '#/components/examples/FlightExample'
     Flights:
       description: Available Flights.
       content:
@@ -451,6 +460,18 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/FlightBooking'
+    FlightBookingResponse:
+      description: Flight Booking Details
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/FlightBookingResponse'
+    FlightTickets:
+      description: Flight Details
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/FlightTickets'
     FlightTicket:
       description: Flight Ticket Details.
       content:
@@ -466,6 +487,15 @@ components:
           examples:
             NotFoundExample:
               $ref: '#/components/examples/NotFoundExample'
+    DeleteBookingResponse:
+      description: Response for cancellig booking
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Message'
+          examples:
+            BadRequestExample:
+              $ref: '#/components/examples/DeleteBookingResponseExample'
     BadRequestError:
       description: Something was wrong with the request.
       content:
@@ -503,11 +533,25 @@ components:
             ForbiddenExample:
               $ref: '#/components/examples/ConflictExample'
   examples:
+    FlightExample:
+      value:
+        flightId: 1
+        meal:
+          nonvegmeal: BIRYANI
+          vegmeal: FRIEDRICE
+        price: 3000
+        flightCompany: EMIRATES
+        startDestination: BENGALURU
+        endDestination: DUBAI
+        startTime: '2021-10-17T14:07:18.436Z'
+        endTime: '2021-10-17T17:07:18.436Z'
+        flightModel: A-380
+        isBlocked: false
     UnauthorizedExample:
       value:
         Errors:
         Error:
-          - Source: PRICELESS_PLANET
+          - Source: FLIGHT_APP
             ReasonCode: UNAUTHORIZED
             Description: "We couldn't recognize you"
             Recoverable: false
@@ -516,7 +560,7 @@ components:
       value:
         Errors:
         Error:
-          - Source: PRICELESS_PLANET
+          - Source: FLIGHT_APP
             ReasonCode: BAD_REQUEST
             Description: "We couldn't handle your request"
             Recoverable: false
@@ -525,7 +569,7 @@ components:
       value:
         Errors:
         Error:
-          - Source: PRICELESS_PLANET
+          - Source: FLIGHT_APP
             ReasonCode: NOT_FOUND
             Description: "You requested something we don't have"
             Recoverable: false
@@ -534,7 +578,7 @@ components:
       value:
         Errors:
         Error:
-          - Source: PRICELESS_PLANET
+          - Source: FLIGHT_APP
             ReasonCode: PERMISSION_DENIED
             Description: "You don't seem authorized to do that"
             Recoverable: false
@@ -543,8 +587,14 @@ components:
       value:
         Errors:
         Error:
-          - Source: PRICELESS_PLANET
+          - Source: FLIGHT_APP
             ReasonCode: CONFLICT
             Description: "Something already exists on our side"
             Recoverable: true
-            Details: "'user@mastercard.com' is already taken"
+            Details: "'user@email.com' is already taken"
+    DeleteBookingResponseExample:
+      value:
+        Message:
+          Source: FLIGHT_APP
+          ReasonCode: CANCEL
+          Description: "FLIGHT BOOKING CANCELLED SUCCESSFULLY"
